# django_dbaccounting

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  forms.py  models.py  setup.cfg  setup.py
django_dbaccounting/: admin.py  apps.py  urls.py  views.py
django_dbaccounting/migrations/: 0004_auto_20200305_0001.py  0005_accounttype_parent.py  0007_auto_20200306_2118.py  0009_transaction_edited.py  0010_auto_20200307_1933.py
django_dbaccounting/templates/dbaccounting/: account_confirm_delete.html  account_detail.html  account_form.html  accounttype_form.html  accounttype_list.html  balance_sheet.html  debt.html  transaction_confirm_delete.html  transaction_detail.html  transaction_list.html
django_dbaccounting/tests/: test_models.py  test_views.py
migrations/: 0001_initial.py  0002_auto_20200303_2358.py  0003_auto_20200304_0000.py  0006_account_date_create.py  0008_transaction_updating.py
static/css/: styles.css
templates/: base_generic.html  index.html
templates/dbaccounting/: account_list.html  accounttype_confirm_delete.html  accounttype_detail.html  transaction_form.html
tests/: test_forms.py
